@@ -137,6 +137,7 @@ This is a partial list of definitions that can be added in a `BOARD.py` file's `
 * `ESPR_BANGLE_UNISTROKE` - Build in 'unistroke' touch gesture recognition
 * `SPIFLASH_SLEEP_CMD` - Set if SPI flash needs to be explicitly slept and woken up
 * `SPIFLASH_READ2X` - Enable 2x speed reads of external flash (using MOSI+MOSI as inputs)
+* `ESPR_JSVAR_FLASH_BUFFER_SIZE=64` - The buffer size in bytes we use when executing/iterating over data in external flash memory (default 32). Should be set based on benchmarks.
 
 These are set automatically when `SAVE_ON_FLASH` is set (see `jsutils.h`)
 
